// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TogglePanel /> renders the TogglePanel correctly 1`] = `
<DocumentFragment>
  <a
    aria-disabled="false"
    aria-label="Expand panel"
    class="pf-c-button pf-m-link"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
        transform=""
      />
    </svg>
     TogglePanel
  </a>
  <div
    class="panel "
  >
    <p>
      the panel content
    </p>
  </div>
</DocumentFragment>
`;

exports[`<TogglePanel /> show the edition panel for the clicked hub 1`] = `
<DocumentFragment>
  <a
    aria-disabled="false"
    aria-label="Expand panel"
    class="pf-c-button pf-m-link"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zM124 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H124z"
        transform=""
      />
    </svg>
     TogglePanel
  </a>
  <div
    class="panel expanded"
  >
    <p
      title="content"
    >
      the panel content
    </p>
  </div>
</DocumentFragment>
`;
